refactor : #327 DevOps CI 병렬 빌드 및 이미지 빌드 후 GHCR 이미지 푸시 테스트 14

--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Docker 이미지 빌드 및 푸시
         run: |
-          ORG_NAME=taken-seat  # GitHub 계정명
+          ORG_NAME=toolatebro
           MODULE_NAME=$(basename "${{ matrix.module }}" | sed 's/com.taken_seat.//')  # com.taken_seat 부분을 제거
           MODULE_PATH=${{ matrix.module }}
           
