feat: #161 <Booking> 대기열 연계 기능 추가

--- a/com.taken_seat.booking-service/src/main/resources/application.yml
+++ b/com.taken_seat.booking-service/src/main/resources/application.yml
@@ -55,6 +55,8 @@ kafka:
     payment-response: payment.response
     ticket-reissue-request: ticket.reissue.request
     ticket-request: ticket.request
+    queue-request: waitingQueue.request
+    queue-response: waitingQueue.response
   consumer:
     group-id:
       booking-service: booking-service
