--- a/com.taken_seat.auth-service/build.gradle
+++ b/com.taken_seat.auth-service/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     // jwt
-    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
