--- a/.github/workflows/ci_cd_deploy.yml
+++ b/.github/workflows/ci_cd_deploy.yml
@@ -109,7 +109,7 @@ jobs:
             for MODULE in "${MODULES[@]}"; do
               IMAGE=ghcr.io/toolatebro/$MODULE:latest
               echo "이미지 제거: $IMAGE"
-              docker rmi -f $IMAGE || true
+              sudo docker rmi -f $IMAGE || true
             done
             
             echo "4. 서비스 재시작"
