--- a/com.taken_seat.performance-service/build.gradle
+++ b/com.taken_seat.performance-service/build.gradle
@@ -69,6 +69,7 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.23.4'
 
     // Zipkin
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
