--- a/com.taken_seat.common-service/build.gradle
+++ b/com.taken_seat.common-service/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     implementation 'org.springframework.kafka:spring-kafka'
 
+    // 문서화 (Swagger + RestDocs)
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.2'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter'
