--- a/com.taken_seat.common-service/src/main/resources/application.yml
+++ b/com.taken_seat.common-service/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring:
   application:
     name: common-service
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
