--- a/com.taken_seat.booking-service/src/main/resources/application.yml
+++ b/com.taken_seat.booking-service/src/main/resources/application.yml
@@ -71,7 +71,7 @@ variable:
 common:
   kafka:
     bootstrap-servers: "${KAFKA_BOOTSTRAP_SERVERS}"
-  trust-package: "com.taken_seat.common_service.message"
+  trust-package: "com.taken_seat.common_service.message,com.taken_seat.booking_service.common.message"
 
 logging:
   loki:
