chore: 모니터링을 위한 management.metrics.tags.service 추가

--- a/com.taken_seat.auth-service/src/main/resources/application.yml
+++ b/com.taken_seat.auth-service/src/main/resources/application.yml
@@ -65,6 +65,7 @@ management:
   metrics:
     tags:
       application: auth-service
+      service: auth-service
   endpoint:
     health:
       show-details: always
