--- a/com.taken_seat.coupon-service/src/main/resources/application.yml
+++ b/com.taken_seat.coupon-service/src/main/resources/application.yml
@@ -59,6 +59,7 @@ management:
   metrics:
     tags:
       application: coupon-service
+      service: coupon-service
   zipkin:
     tracing:
       endpoint: ${ZIPKIN_ENDPOINT}
