--- a/com.taken_seat.gateway-service/src/main/resources/application.yml
+++ b/com.taken_seat.gateway-service/src/main/resources/application.yml
@@ -113,6 +113,7 @@ management:
   metrics:
     tags:
       application: gateway-service
+      service: gateway-service
   endpoint:
     health:
       show-details: always
