--- a/com.taken_seat.payment-service/src/main/resources/application.yml
+++ b/com.taken_seat.payment-service/src/main/resources/application.yml
@@ -36,6 +36,7 @@ management:
   metrics:
     tags:
       application: payment-service
+      service: payment-service
   zipkin:
     tracing:
       endpoint: ${ZIPKIN_ENDPOINT}
