--- a/com.taken_seat.performance-service/src/main/resources/application.yml
+++ b/com.taken_seat.performance-service/src/main/resources/application.yml
@@ -40,6 +40,7 @@ management:
   metrics:
     tags:
       application: performance-service
+      service: performance-service
 
   zipkin:
     tracing:
