--- a/com.taken_seat.review-service/src/main/resources/application.yml
+++ b/com.taken_seat.review-service/src/main/resources/application.yml
@@ -36,6 +36,7 @@ management:
   metrics:
     tags:
       application: review-service
+      service: review-service
   zipkin:
     tracing:
       endpoint: ${ZIPKIN_ENDPOINT}
