--- a/com.taken_seat.common-service/build.gradle
+++ b/com.taken_seat.common-service/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     // 문서화 (Swagger + RestDocs)
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
