--- a/com.taken_seat.booking-service/build.gradle
+++ b/com.taken_seat.booking-service/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
     // Kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
