feat: #161 <Booking> 프로메테우스 연결 및 대기열 좌석검사 로직 추가

--- a/com.taken_seat.booking-service/src/main/resources/application.yml
+++ b/com.taken_seat.booking-service/src/main/resources/application.yml
@@ -4,20 +4,17 @@ server:
 spring:
   application:
     name: booking-service
-
   data:
     redis:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
       username: ${REDIS_USERNAME}
       password: ${REDIS_PASSWORD}
-
   datasource:
     url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
-
   jpa:
     hibernate:
       ddl-auto: create
@@ -26,6 +23,13 @@ spring:
         format_sql: true
 
 management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
   metrics:
     tags:
       application: booking-service
