fix: #479 Kafka 설정 누락 추가
- spring.kafka.bootstrap-servers 항목 추가로 KafkaTemplate 자동 등록 활성화

--- a/com.taken_seat.auth-service/src/main/resources/application.yml
+++ b/com.taken_seat.auth-service/src/main/resources/application.yml
@@ -26,6 +26,9 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
 
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
+
 kafka:
   topic:
     coupon-request-user: coupon.request.user
