--- a/com.taken_seat.gateway-service/build.gradle
+++ b/com.taken_seat.gateway-service/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
+    // Redisson
+    implementation 'org.redisson:redisson-spring-boot-starter:3.23.4'
+
     // jwt
     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
