--- a/com.taken_seat.booking-service/src/main/resources/application.yml
+++ b/com.taken_seat.booking-service/src/main/resources/application.yml
@@ -82,7 +82,7 @@ variable:
 common:
   kafka:
     bootstrap-servers: "${KAFKA_BOOTSTRAP_SERVERS}"
-  trust-package: "com.taken_seat.common_service.message,com.taken_seat.booking_service.common.message,com.taken_seat.booking_service.booking.application.dto.event"
+  trust-package: "com.taken_seat.common_service.message,com.taken_seat.booking_service.common.message"
 
 logging:
   loki:
